--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
                 <div class="portfolio-gallery-item box-bold" data-aos="zoom-in" data-aos-delay=0>
                     <div class="portfolio-images" >
-                        <a href="resource/image/portfolio/big/8.jpg" data-lightbox="rav-portfolio"><img src="resource/image/portfolio/smol/8.jpg" loading="lazy"></a>
+                        <a href="resource/image/portfolio/big/8.jpg" data-lightbox="rav-portfolio"><img src="resource/image/portfolio/smol/8.JPG" loading="lazy"></a>
                     </div>
                 </div>
             </div>
